[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/PistolGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Interaction.gd" type="Script" id=3]
[ext_resource path="res://Player/AssaultRifleGun.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.25

[sub_resource type="CapsuleMesh" id=2]
radius = 0.75
mid_height = 1.25

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 1 )
mouse_sensetivity = 0.15

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.019, 1.069, 0 )

[node name="FirstPersonCamera" type="Camera" parent="Head"]
current = true

[node name="InteractionRayCast" type="RayCast" parent="Head/FirstPersonCamera"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 4
script = ExtResource( 3 )

[node name="PistolGun" parent="Head/FirstPersonCamera" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.665259, -0.82426, -1.31309 )

[node name="AssaultRifleGun" parent="Head/FirstPersonCamera" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.675786, -0.884679, -1.75938 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="ThirdPersonCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57751, 2.91274 )
